--- a/index1.html
+++ b/index1.html
@@ -50,7 +50,7 @@
                     
                 </div>
                 <div class="logo">
-                    <img src="image.png" alt="">
+                    <img src="pulogo.jpeg" alt="">
                 </div>
                 <div class="txt">
                     <div class="t1">
