--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
+<!-- page1 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style1.css">
+    <title>GNUMS | Parul University </title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="main">
+        <div class="frame"></div>
         <div class="box">
             <div class="box2">
                 <div class="header">
@@ -33,9 +36,10 @@
                             <!-- submit button -->
                             <div class="row">
                                 <div class="button">
-                                    <input type="button" name="lbSubmit" value="Submit" onclick="if (Page_ClientValidate(&#39;forgotPassword&#39;)){this.disabled=&#39;true&#39;;this.value=&#39;Please Wait.....&#39;};WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&quot;lbSubmit&quot;, &quot;&quot;, true, &quot;forgotPassword&quot;, &quot;&quot;, false, true))" id="lbSubmit" class="btn green-haze " />
+                                    <input type="button" name="lbSubmit" value="Submit"id="lbSubmit" class="btn green-haze " />
+                                    <!-- <button>Back to Login</button> -->
                                     <!-- <input type="button" name="lblogin" value="Back to Login" id="lblogin"/> -->
-                                    <a id="lblogin" href="index1.html "> Back to Login</a>
+                                    <a id="lblogin" href="index1.html"> Back to Login</a>
                                     <div class="backlogin">
                                     </div>
                                     
@@ -66,5 +70,6 @@
             </div>
         </div>
     </div>
+    
 </body>
 </html>
