--- a/index1.html
+++ b/index1.html
@@ -1,11 +1,12 @@
+<!-- page2 -->
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GNUMS | Parul University</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="style1.css">
+    <script src="script1.js"></script>
 </head>
 <body>
     <div class="container">
@@ -16,7 +17,7 @@
             <div id="box3">
                 <div class="login-content">
                     <div style="text-align: -webkit-center;">
-                        <img src="image.png" id="imgFooterLogo">
+                        <img src="pu-logo.jpeg" id="imgFooterLogo">
                     </div>
                     
                     <div id="divLogin" class="row">
@@ -105,6 +106,6 @@
         </div>
         </div>
     </div></div>
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
 </body>
 </html>
