--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <div class="button">
                                     <input type="button" name="lbSubmit" value="Submit"id="lbSubmit" class="btn green-haze " />
                                     <!-- <button>Back to Login</button> -->
-                                    <input type="button" name="lblogin" value="Back to Login" id="lblogin"/>
+                                    <input type="button" name="lblogin" value="Back to Login" id="lblogin" onclick="goToLogin"/>
                                     <!-- <a id="lblogin" href="index1.html"> Back to Login</a> -->
                                     <div class="backlogin">
                                     </div>
