--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                             <span id="revForgotpwd" style="color:Red;display:none;">Please Enter Valid Email ID</span>
                             <!-- submit button -->
                             <div class="row">
-                                <div class="button">
+                                 <div class="button">
                                     <input type="button" name="lbSubmit" value="Submit"id="lbSubmit" class="btn green-haze " />
                                     <!-- <button>Back to Login</button> -->
-                                    <input type="button" name="lblogin" value="Back to Login" id="lblogin" onclick="goToLogin"/>
+                                    <input type="button" name="lblogin" value="Back to Login" id="lblogin"/>
                                     <!-- <a id="lblogin" href="index1.html"> Back to Login</a> -->
                                     <div class="backlogin">
                                     </div>
